changed secondary-nav spacing to fix wrapping issue on iphone

--- a/app/webroot/css/less/style.less
+++ b/app/webroot/css/less/style.less
@@ -162,11 +162,11 @@ div.secondary-nav {
   
     list-style:none; 
     position:relative;
-    left:50%;
+    left:40%;
   
     li {
       float: left;
-      margin: 0 10px;
+      margin: 0 2px;
     }
   
     li a, 
